# session-manager

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  ToDo.md
.github/workflows/: ci.yml
docs/: documentation-structure.md  functional-specification.md  implementation-plan.md  technical-specification.md
docs/decisions/: 0001-use-rust-and-a-single-package-modular-structure.md  0002-use-toml-configuration-and-json-runtime-state.md  0003-use-a-versioned-json-lines-unix-socket-api.md  0008-use-durable-sagas-and-conservative-recovery.md  0009-separate-default-isolated-and-live-test-environments.md  0010-keep-the-core-platform-independent-with-opaque-adapter-checkpoints.md  0011-use-explicit-subprocess-adapters.md  decision-records.md
src/: adapter_contract.rs  application.rs  configuration.rs  domain.rs  interface.rs  lib.rs  main.rs  storage_port.rs  test_support.rs
