[package]
name = "session-manager"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Platform-independent work-context service for Linux"
license = "MIT"
publish = false

[lib]
name = "session_manager"
path = "src/lib.rs"

[[bin]]
name = "session-manager"
path = "src/main.rs"

[features]
default = []

[dependencies]
sha2 = "0.10.9"
toml = "0.8.23"
toml_edit = "0.22.27"
uuid = { version = "1.20.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["fs"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
assigning_clones = "allow"
format_collect = "allow"
map_identity = "allow"
